修改公共类

--- a/index.html
+++ b/index.html
@@ -8,11 +8,48 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/index.css">
+    <script src="./lib/zepto/zepto.min.js"></script>
     <script src="./js/media.js"></script>
 </head>
 
 <body>
     <div class="index-menu">
+        <a href="javascript:;">
+            <img src="./images/ic_search.png" alt=""> 比价搜索
+        </a>
+        <a href="javascript:;">
+            <img src="./images/ic_search.png" alt=""> 比价搜索
+        </a>
+        <a href="javascript:;">
+            <img src="./images/ic_search.png" alt=""> 比价搜索
+        </a>
+        <a href="javascript:;">
+            <img src="./images/ic_search.png" alt=""> 比价搜索
+        </a>
+        <a href="javascript:;">
+            <img src="./images/ic_search.png" alt=""> 比价搜索
+        </a>
+        <a href="javascript:;">
+            <img src="./images/ic_search.png" alt=""> 比价搜索
+        </a>
+        <a href="javascript:;">
+            <img src="./images/ic_search.png" alt=""> 比价搜索
+        </a>
+        <a href="javascript:;">
+            <img src="./images/ic_search.png" alt=""> 比价搜索
+        </a>
+        <a href="javascript:;">
+            <img src="./images/ic_search.png" alt=""> 比价搜索
+        </a>
+        <a href="javascript:;">
+            <img src="./images/ic_search.png" alt=""> 比价搜索
+        </a>
+        <a href="javascript:;">
+            <img src="./images/ic_search.png" alt=""> 比价搜索
+        </a>
+        <a href="javascript:;">
+            <img src="./images/ic_search.png" alt=""> 比价搜索
+        </a>
 
     </div>
 </body>
