--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="footer-tools">
             <a href="javascript:;">登录</a>
             <a href="javascript:;">注册</a>
-            <a href="javascript:;">返回顶部</a>
+            <a href="javascript:;" id="top">返回顶部</a>
         </div>
         <!-- 版权信息 -->
         <div class="footer-copyright">
@@ -107,7 +107,7 @@
 <!-- 折扣模板 -->
 <script type="text/template" id="discountTmp">
     {{each result as val key}}
-    <a href="javascript:;" data-id="{{val.productId}}">
+    <a href="{{val.titlehref}}" data-id="{{val.productId}}">
         <div class="left">
             {{val.productImgSm}}
         </div>
@@ -127,7 +127,8 @@
 
 
 <script src="./js/media.js"></script>
-<script src="./lib/zepto/zepto.min.js"></script>
+<script src="./js/jquery-3.3.1.min.js"></script>
+<!-- <script src="./lib/zepto/zepto.min.js"></script> -->
 <script src="./js/index.js"></script>
 <script>
     render();
